frontend/deployments/staging/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orchestra-frontend-stg-service
  namespace: orchestra-staging
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "orchestra-frontend-stg-backend-config"}'
spec:
  selector:
    app: orchestra-frontend-stg
  type: NodePort
  ports:
    - name: "443-to-3000"
      protocol: TCP
      port: 443
      targetPort: 3000
